<resources>
    <string name="app_name">Todo List</string>
    <string name="action_settings">Settings</string>
    <string name="home_text">Home</string>
    <string name="recycler_empty_text">There are no to-do lists to display...</string>
    <string name="dialog_todo_list_title">Create a To-do List</string>
    <string name="dialog_todo_list_hint">type in name</string>
    <string name="dialog_todo_list_cancel_text">Cancel</string>
    <string name="dialog_todo_list_add_text">Add</string>
    <string name="dialog_todo_list_hint_error">Enter a valid name...</string>
    <string name="dialog_task_title">Enter your new task!</string>
    <string name="dialog_task_hint">task description</string>
    <string name="dialog_cancel_text">Cancel</string>
    <string name="dialog_add_text">Add</string>
    <string name="menu_delete_todolist">Delete To-do(s)</string>
    <string name="menu_delete_task">Delete</string>
    <string name="item_body_tasks_text">Tasks:</string>
    <string name="item_body_created_text">Created:</string>
    <string name="due_date_title">Add due date</string>
    <string name="menu_sort_task">sort</string>
    <string name="sort_none">None</string>
    <string name="sort_due_date">Due Date</string>
    <string name="sort_priority">Priority</string>
    <string name="sort_completed">Completed</string>
    <string name="dialog_ok_text">OK</string>
    <string name="sort_name">Name</string>
    <string name="sort_creation_date">Creation Date</string>
    <string name="priority_title">Add priority</string>
    <string name="description_title">Add description</string>
    <string name="todo_list_title">Add title</string>
    <string name="add_due_time">Add due time</string>
    <string name="dialog_reminder_title">Choose a time</string>
    <string name="task_reminder_text">Add reminder</string>
    <string name="dialog_due_date_set_text_view">set date</string>
    <string name="reminder_title_text">Set a reminder</string>
    <string name="five_minutes_text">5 minutes before due date</string>
    <string name="ten_minutes_text">10 minutes before due date</string>
    <string name="twenty_minutes_text">20 minutes before due date</string>
    <string name="thirty_minutes_text">30 minutes before due date</string>
    <string name="hour_text">1 hour before due date</string>
    <string name="priority_title_text">Set a priority</string>
    <string name="none_text">None</string>
    <string name="low_text">low</string>
    <string name="medium_text">Medium</string>
    <string name="high_text">High</string>
    <string name="priority_message_text">None if no selection</string>
    <string name="cancel_text">cancel</string>
    <string name="create_text">create</string>

</resources>
