<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" 
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        style="@style/DialogTodolistTitle"/>

    <EditText
        android:id="@+id/todoListNameEditText"
        style="@style/DialogTodolistEditText"/>

    <LinearLayout
        style="@style/DialogButtonContainer">

        <Button
            android:id="@+id/todoListCancelButton"
            style="@style/TodolistCancelButton"/>

        <Button
            android:id="@+id/todoListAddButton"
            style="@style/TodolistAddButton"/>
    </LinearLayout>
</LinearLayout>